# Eurobot_Team_Sinjab-

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
docs/demo/: README.md
docs/design/: README.md
docs/handbook/: README.md
docs/mechanical/: README.md  SINJAB_Robot_Design_Documentation.docx
docs/mechanical/Robot part/: 3_barre_support.STL  Part22.STL  Plaque.STL  Plaquebass.STL  Plaquedessus.STL  couvdeva.STL  couvdroit.STL  couvgauc.STL  garf.STL  garf2.STL  garfaxe.STL  pinion.STL  pinion2.STL  pinionopp.STL  suppbalise.STL  suppderri.STL  suppdroit.STL  suppgauc.STL
docs/perception/: README.md
docs/programming/: Eurobot Manipulation Package Documentation.docx  Eurobot Robot Model Documentation.docx  README.md
docs/project/: README.md
electronics/: README.md
electronics/bom/: List_of_electronic_components (updated).xlsx  README.md
electronics/power/: README.md
electronics/schematics/: README.md
eurobot_ws/Eurobot_Team_Sinjab-/.devcontainer/: ros_entrypoint.sh
eurobot_ws/Eurobot_Team_Sinjab-/.github/ISSUE_TEMPLATE/: bug.md  feature.md
eurobot_ws/Eurobot_Team_Sinjab-/docs/perception/: Eurobot Perception Package Documentation.docx
eurobot_ws/Eurobot_Team_Sinjab-/electronics/schematics/: Power_Distribution_Board.kicad_sch
eurobot_ws/Eurobot_Team_Sinjab-/eurobot_ws/: eurobot_map.yaml
eurobot_ws/Eurobot_Team_Sinjab-/eurobot_ws/Eurobot_Team_Sinjab-/.devcontainer/: Dockerfile
eurobot_ws/Eurobot_Team_Sinjab-/eurobot_ws/eurobot_ws/: .gitignore  eurobot_map.pgm  eurobot_map_serial.data
eurobot_ws/Eurobot_Team_Sinjab-/eurobot_ws/src/eurobot_interfaces/: package.xml
eurobot_ws/Eurobot_Team_Sinjab-/eurobot_ws/src/eurobot_manipulation/: setup.cfg
eurobot_ws/Eurobot_Team_Sinjab-/eurobot_ws/src/eurobot_navigation/: package.xml
eurobot_ws/Eurobot_Team_Sinjab-/mam_eurobot_2026/mam_eurobot_2026/: py_test.py
eurobot_ws/Eurobot_Team_Sinjab-/mam_eurobot_2026/models/mat/: model.sdf
eurobot_ws/eurobot_ws/Eurobot_Team_Sinjab-/: README.md
eurobot_ws/eurobot_ws/Eurobot_Team_Sinjab-/.github/ISSUE_TEMPLATE/: research.md
eurobot_ws/eurobot_ws/Eurobot_Team_Sinjab-/docs/bom/: README.md
eurobot_ws/eurobot_ws/Eurobot_Team_Sinjab-/electronics/schematics/: Power&Motion.kicad_sch
eurobot_ws/eurobot_ws/Eurobot_Team_Sinjab-/mam_eurobot_2026/: CMakeLists.txt  package.xml  setup.py
eurobot_ws/eurobot_ws/Eurobot_Team_Sinjab-/mam_eurobot_2026/models/simple_robot/: model.config
eurobot_ws/eurobot_ws/src/eurobot_navigation/: setup.cfg
eurobot_ws/eurobot_ws/src/eurobot_perception/: package.xml  setup.cfg
eurobot_ws/eurobot_ws/src/mam_eurobot_2026/: package.xml
eurobot_ws/src/eurobot_interfaces/: CMakeLists.txt
eurobot_ws/src/eurobot_manipulation/: package.xml
eurobot_ws/src/eurobot_navigation/: setup.py
eurobot_ws/src/eurobot_navigation/config/: mapper_params_online_async.yaml
eurobot_ws/src/eurobot_navigation/eurobot_navigation/: localization_node.py  scan_frame_fixer.py
eurobot_ws/src/eurobot_navigation/launch/: bridges.launch.py  mapping_navigation.launch.py
eurobot_ws/src/eurobot_perception/launch/: perception.launch.py
eurobot_ws/src/mam_eurobot_2026/: setup.py
eurobot_ws/src/mam_eurobot_2026/urdf/: Robot_complete.urdf.xacro
mam_eurobot_2026/: setup.py
mam_eurobot_2026/launch/: arena.launch.py
mam_eurobot_2026/models/crate/: model.sdf
mam_eurobot_2026/models/simple_robot/: model.sdf
mam_eurobot_2026/src/: cpp_test.cpp
mam_eurobot_2026/worlds/: arena_world.sdf
(+62 files in other folders)
